k8s/restaurantdepl.yml

apiVersion: v1
kind: Service
metadata:
  name: restaurant-service
spec:
  ports:
    - protocol: TCP
      port: 9091
      targetPort: 9091
  selector:
    app: restaurantapp
  type: NodePort
